--- a/Sam530/Sam530.csproj
+++ b/Sam530/Sam530.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.9" />
+    <PackageReference Include="SharpCompress" Version="0.40.0" />
   </ItemGroup>
 
   <ItemGroup>
